--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "firebase": "^9.6.10",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
